creacion de detalle message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,6 @@
 <!-- <ngx-utilitario-chat-list-detail></ngx-utilitario-chat-list-detail> -->
 <!-- <ngx-utilitario-chat-search></ngx-utilitario-chat-search> -->
 <!-- <ngx-utilitario-chat-list></ngx-utilitario-chat-list> -->
-<ngx-utilitario-chat></ngx-utilitario-chat>
+<!-- <ngx-utilitario-chat></ngx-utilitario-chat> -->
+
+<ngx-utilitario-chat-detail-message></ngx-utilitario-chat-detail-message>
