--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -39,85 +39,10 @@
     </div>
   </div>
   <!--Mensajes del chat-->
-  <div class="ngx-util-cuerpo-Chat">
+  <div class="ngx-util-detail-messages" style="background: green">
     <ngx-utilitario-perfect-scroll>
-      <div class="ngx-util-detail-messages-show">
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-        1<hr>
-
-      </div>
-      
       <!-- <div class="ngx-util-detail-messages-show">
-          <div class="col-12" *ngFor="let item of chatDetail.messages; let i=index ">
-            <div class="container-fluid ">
-              <div class="row" *ngIf="dayLine(item.date,i)">
-                <div class="w-100 ngx-util-chat-linea">
-                  <span class="ngx-util-chat-linea-span">
-                    {{dayDifference(item.date)}}
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid ">
-              <div [ngClass]="chooseStyle(item.messageType)">
-                <div>{{item.message}}</div>
-                <div>{{item.hour}}
-                  <span *ngIf="messageState(item.messageState, item.messageType, EMessageState.sent )"
-                    class="ngx-util-msj-enviado">
-                    <em class="fa fa-check"></em>
-                  </span>
-                  <span *ngIf="messageState(item.messageState, item.messageType, EMessageState.recived)"
-                    class="ngx-util-msj-recibido">
-                    <em class="fa fa-check"></em>
-                    <em class="fa fa-check"></em>
-                  </span>
-                  <span *ngIf="messageState(item.messageState, item.messageType, EMessageState.read )"
-                    class="ngx-util-msj-leido">
-                    <em class="fa fa-check"></em>
-                    <em class="fa fa-check"></em>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div> -->
     </ngx-utilitario-perfect-scroll>
   </div>
