--- a/src/app/chat/chat/chat-detail/chat-detail.component.scss
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.scss
@@ -5,95 +5,140 @@
     width: 100%;
     height: 100%;
     border: 0.0625rem solid #e0e3e4;
+    overflow: hidden;
+    // height: -webkit-fill-available;
 }
+//estilos aplicar a la cabecera del chat
 .ngx-util-detail-head{
-    display: flex;
+    // display: flex;
     padding: 0.62rem 0.93rem;
     height: 4.37rem;
     border-bottom: 0.0625rem solid #e0e3e4;
 }
+
+.detail-head-img{
+    position: relative;
+    width: 4.8rem;
+    min-width: 2rem;
+    margin-right: 0.5rem;
+}
+
+.img-profile-chat-detail{
+    height: 3.125rem;
+}
+
+
+.detail-head-name{
+    font-size: 1rem;
+    font-weight: bold;
+    flex: 1 1 auto;
+    color: #324148;
+}
+
+.detail-head-state-letters{
+    font-size: 0.75rem;
+    width: 3rem;
+    color: #b0b0b0;
+}
+
+.detail-head-actions{
+    flex: 0 0 auto;
+}
+
+//estilos a los mensajes
 .ngx-util-detail-messages{
     flex-grow : 1;
     overflow: hidden;
 }
 
 .ngx-util-detail-messages-show{
-    flex-flow: column;
-    display: flow-root;
-    height: -webkit-fill-available;
-}
-.ngx-util-chat-linea {
-    position: relative;
-    text-align: center;
-    overflow: hidden;
-    font-size: 0.87rem;
-    margin: 0.93rem 3.125rem;
-    text-transform: capitalize;
-    color: #9e9e9e;
-}
-.ngx-util-chat-linea::before {
-    background: #e0e3e4;
-    content: "";
-    height: 0.0625rem;
-    right: 50%;
-    margin-right: 1.75rem;
-    position: absolute;
-    top: 50%;
-    width: 100%;
-}
-.ngx-util-chat-linea::after{
-    background: #e0e3e4;
-    content: "";
-    height: 0.0625rem;
-    left: 50%;
-    margin-left: 1.75rem;
-    position: absolute;
-    top: 50%;
-    width: 100%;
+    height: 100%;
+    background: #000;
 }
 
-.ngx-util-chat-right{
-    background: #e7b723;
-    padding: 0.625rem 0.9375rem;
-    border-radius: .25rem;
-    display: inline-block;
-    position: relative;
-    margin-bottom: 0.3125rem;
-    word-wrap: break-word;
-    max-width: 60%;
-    color: white;
-    text-align: right;
-}
-.ngx-util-chat-left{
-    background: #fff;
+
+//estilos al agregar un nuevo mensaje
+.ngx-util-detail-add{
+    height: 4.37rem;
 }
 
-.arrow_box {
-	position: relative;
-}
-.arrow_box:after, .arrow_box:before {
-	left: 100%;
-	top: 10%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-}
+// .ngx-util-detail-messages-show{
+//     flex-flow: column;
+//     display: flow-root;
+//     height: -webkit-fill-available;
+// }
+// .ngx-util-chat-linea {
+//     position: relative;
+//     text-align: center;
+//     overflow: hidden;
+//     font-size: 0.87rem;
+//     margin: 0.93rem 3.125rem;
+//     text-transform: capitalize;
+//     color: #9e9e9e;
+// }
+// .ngx-util-chat-linea::before {
+//     background: #e0e3e4;
+//     content: "";
+//     height: 0.0625rem;
+//     right: 50%;
+//     margin-right: 1.75rem;
+//     position: absolute;
+//     top: 50%;
+//     width: 100%;
+// }
+// .ngx-util-chat-linea::after{
+//     background: #e0e3e4;
+//     content: "";
+//     height: 0.0625rem;
+//     left: 50%;
+//     margin-left: 1.75rem;
+//     position: absolute;
+//     top: 50%;
+//     width: 100%;
+// }
 
-.arrow_box:after {
-	border-color: rgba(136, 183, 213, 0);
-	border-left-color: #e7b723;
-	border-width: 0.4375rem;
-	margin-top: 0;
-}
-.arrow_box:before {
-	border-color: rgba(194, 225, 245, 0);
-	border-left-color: #e7b723;
-	border-width: 0.4375rem;
-	margin-top: 0;
-}
+// .ngx-util-chat-right{
+//     background: #e7b723;
+//     padding: 0.625rem 0.9375rem;
+//     border-radius: .25rem;
+//     display: inline-block;
+//     position: relative;
+//     margin-bottom: 0.3125rem;
+//     word-wrap: break-word;
+//     max-width: 60%;
+//     color: white;
+//     text-align: right;
+// }
+// .ngx-util-chat-left{
+//     background: #fff;
+// }
+
+// .arrow_box {
+// 	position: relative;
+// }
+// .arrow_box:after, .arrow_box:before {
+// 	left: 100%;
+// 	top: 10%;
+// 	border: solid transparent;
+// 	content: " ";
+// 	height: 0;
+// 	width: 0;
+// 	position: absolute;
+// 	pointer-events: none;
+// }
+
+// .arrow_box:after {
+// 	border-color: rgba(136, 183, 213, 0);
+// 	border-left-color: #e7b723;
+// 	border-width: 0.4375rem;
+// 	margin-top: 0;
+// }
+// .arrow_box:before {
+// 	border-color: rgba(194, 225, 245, 0);
+// 	border-left-color: #e7b723;
+// 	border-width: 0.4375rem;
+// 	margin-top: 0;
+// }
 
 
 // .ngx-utilitario-chat-linea > span {
@@ -121,52 +166,26 @@
 //     margin-left: 0.9375‬rem;
 // }
 
-.ngx-util-msj-enviado{
-    color: green;   
-}
-.ngx-util-msj-recibido{
-    color: green;   
-}
-.ngx-util-msj-leido{
-    color: green;   
-}
-
-.img-profile-chat-detail{
-    height: 3.125rem;
-}
+// .ngx-util-msj-enviado{
+//     color: green;   
+// }
+// .ngx-util-msj-recibido{
+//     color: green;   
+// }
+// .ngx-util-msj-leido{
+//     color: green;   
+// }
 
 
-.ngx-util-chat-agregar{
-    position: relative;
-}
-
-.ngx-util-cuerpo-Chat{
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-}
-
-.detail-head-img{
-    position: relative;
-    width: 4.8rem;
-    min-width: 2rem;
-    margin-right: 0.5rem;
-}
 
 
-.detail-head-name{
-    font-size: 1rem;
-    font-weight: bold;
-    flex: 1 1 auto;
-    color: #324148;
-}
+// .ngx-util-chat-agregar{
+//     position: relative;
+// }
 
-.detail-head-state-letters{
-    font-size: 0.75rem;
-    width: 3rem;
-    color: #b0b0b0;
-}
+// .ngx-util-cuerpo-Chat{
+//     display: flex;
+//     flex-flow: column;
+//     height: 100%;
+// }
 
-.detail-head-actions{
-    flex: 0 0 auto;
-}
