--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -41,9 +41,8 @@
   <!--Mensajes del chat-->
   <div class="ngx-util-detail-messages" style="background: green">
     <ngx-utilitario-perfect-scroll>
-      <!-- <div class="ngx-util-detail-messages-show">
-          
-        </div> -->
+      <ngx-utilitario-chat-detail-message style="background: rgb(245, 245, 246);"></ngx-utilitario-chat-detail-message>
+
     </ngx-utilitario-perfect-scroll>
   </div>
   <!--Agregar chat-->
