scroll final del chat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,4 @@
 <!-- <ngx-utilitario-chat-list></ngx-utilitario-chat-list> -->
 <ngx-utilitario-chat></ngx-utilitario-chat>
 
-<!-- <ngx-utilitario-chat-detail-message style="background: rgb(245, 245, 246);"></ngx-utilitario-chat-detail-message> -->
+<!-- <ngx-utilitario-chat-detail-message style="background: rgb(245, 245, 246); height: 450px; overflow: hidden;"></ngx-utilitario-chat-detail-message> -->
