--- a/src/app/perfect-scroll/perfect-scroll/perfect-scroll.component.html
+++ b/src/app/perfect-scroll/perfect-scroll/perfect-scroll.component.html
@@ -1,4 +1,4 @@
-<perfect-scrollbar class="scroll-container" fxFlex="auto" [config]="config" [scrollIndicators]="true"
+<perfect-scrollbar class="scroll-container window__list" fxFlex="auto" [config]="config" [scrollIndicators]="true"
   (psXReachEnd)="onScrollEvent($event)" (psYReachEnd)="onScrollEvent($event)" (psXReachStart)="onScrollEvent($event)"
   (psYReachStart)="onScrollEvent($event)">
   <div class="scrollable-content">
