--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -5,7 +5,7 @@
         Chats
         <span class="fa fa-pencil-square-o"></span>
       </header>
-      <ngx-utilitario-chat-search class="ngx-util-list-search"></ngx-utilitario-chat-search>
+      <ngx-utilitario-chat-search class="ngx-util-list-search" (searchChange)="searchChange($event)"></ngx-utilitario-chat-search>
       <ngx-utilitario-chat-list class="ngx-util-list-detail" [list]="lista" (clickList)="listDetailClick($event)">
       </ngx-utilitario-chat-list>
     </div>
