--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,7 @@
 <!-- <ngx-utilitario-chat-list></ngx-utilitario-chat-list> -->
 <ngx-utilitario-chat></ngx-utilitario-chat>
 
+<!-- <div ></div> -->
+
+
 <!-- <ngx-utilitario-chat-detail-message style="background: rgb(245, 245, 246); height: 450px; overflow: hidden;"></ngx-utilitario-chat-detail-message> -->
