--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -10,7 +10,7 @@
       </ngx-utilitario-chat-list>
     </div>
     <div class="col-md-8 col-sm-12">
-      <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail>
+      <ngx-utilitario-chat-detail [chatDetail]="chatDetail" [moveToMessage]="moveToMessageIndex"></ngx-utilitario-chat-detail>
     </div>
   </div>
 </div>
