--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -40,7 +40,7 @@
   </div>
   <!--Mensajes del chat-->
   <div class="ngx-util-detail-messages" style="background: rgb(245, 245, 246);">
-    <ngx-utilitario-perfect-scroll [position]="position">
+    <ngx-utilitario-perfect-scroll [position]="position" [elementName] = "elementName" >
       <ngx-utilitario-chat-detail-message [messages]="chatDetail.messages"></ngx-utilitario-chat-detail-message>
     </ngx-utilitario-perfect-scroll>
   </div>
