--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .fondo {
     background: gray !important;
 }
-::ng-deep .search-highlight{
+:host ::ng-deep .search-highlight{
     background: red;
 }
