--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -11,9 +11,9 @@
     <div class="col-1 no-padding">
       <div class="ngx-util-btns-actions">
         <input class="ngx-util-input-file" type="file" accept="image/*" #file (change)="sendImage($event)">
-        <button id="btn_sendImage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="file.click()"><i
+        <button id="btn_sendImage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="file.click()" [attr.disabled]="disabled ? '' : null"><i
             class="fa fa-camera" aria-hidden="true"></i></button>
-        <button id="btn_sendMessage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray"
+        <button id="btn_sendMessage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" [attr.disabled]="disabled ? '' : null"
           (click)="sendMessage()"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
       </div>
     </div>
