--- a/src/app/chat/chat/chat-detail-message/chat-detail-message.component.scss
+++ b/src/app/chat/chat/chat-detail-message/chat-detail-message.component.scss
@@ -67,6 +67,10 @@
     opacity: 1;
     font-size: 0.875rem;
 }
+.img-message{
+    height: 10rem;
+    width: auto; 
+}
 .ngx-util-chat-right .hour{
     color: rgba(255, 255, 255, 0.5);
     opacity: 1;
