--- a/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.html
+++ b/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.html
@@ -19,6 +19,7 @@
     </ngx-utilitario-perfect-scroll>
     <input class="ngx-util-input-file" type="file" accept="image/*" #file (change)="sendImage($event)" multiple>
     <div class="ngx-util-preview-files-add" (click)="file.click()"> 
-      <em class="fa fa-plus ngx-util-preview-files-add-icon"></em> Agregar Imagenes</div>
+      <em class="fa fa-plus ngx-util-preview-files-add-icon"></em> Agregar Imagenes
+    </div>
   </div>
 </div>
