añadir accion enter

--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -4,7 +4,7 @@
     <div class="col-11">
       <form [formGroup]="messageForm">
         <input id="txt_message" class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
-        [placeholder]="placeholder">
+        [placeholder]="placeholder" (keyup.enter)="sendMessage()">
       </form>
     </div>
     <!--Acciones-->
