--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<ngx-utilitario-chat></ngx-utilitario-chat>
+<ngx-utilitario-chat [list]="lista"></ngx-utilitario-chat>
 
 <!-- <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview> -->
