--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,6 @@
     </ngx-utilitario-image-carousel>
 </section> -->
 
-<ngx-utilitario-mapbox></ngx-utilitario-mapbox>
+<!-- <ngx-utilitario-mapbox></ngx-utilitario-mapbox> -->
+<ngx-utilitario-bar-chart [barChartLabels]="barChartLabels" [barChartData]="barChartData"></ngx-utilitario-bar-chart>
+<button (click)="cambiar()">cambiar lable</button>
