--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,5 @@
 <!-- <ngx-utilitario-mapbox></ngx-utilitario-mapbox> -->
 <ngx-utilitario-bar-chart [barChartLabels]="barChartLabels" [barChartData]="barChartData"></ngx-utilitario-bar-chart>
 <button (click)="cambiar()">cambiar lable</button>
+<ngx-utilitario-line-chart></ngx-utilitario-line-chart>
+<button (click)="cambiarLine()">cambiar lable</button>
