--- a/src/app/graphics/line-chart/line-chart.component.html
+++ b/src/app/graphics/line-chart/line-chart.component.html
@@ -1,3 +1,13 @@
-<p>
-  line-chart works!
-</p>
+<div>
+  <div style="display: block">
+    <canvas baseChart 
+      [datasets]="lineChartData" 
+      [labels]="lineChartLabels" 
+      [options]="lineChartOptions"
+      [colors]="lineChartColors" 
+      [legend]="lineChartLegend" 
+      [chartType]="lineChartType" 
+      [plugins]="lineChartPlugins">>
+    </canvas>
+  </div>
+</div>
