--- a/src/app/graphics/line-chart/line-chart.component.html
+++ b/src/app/graphics/line-chart/line-chart.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div style="display: block">
+  <div style="display: block" *ngIf="lineChartLabels && lineChartData">
     <canvas baseChart 
       [datasets]="lineChartData" 
       [labels]="lineChartLabels" 
