cambio de nombre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,5 +20,5 @@
 <button (click)="cambiar()">cambiar lable</button>
 <ngx-utilitario-line-chart [lineChartLabels]="lineChartLabels" [lineChartData]="lineChartData"></ngx-utilitario-line-chart>
 <button (click)="cambiarLine()">cambiar lable</button>
-<ngx-utilitario-polar-area-chart></ngx-utilitario-polar-area-chart>
+<ngx-utilitario-polar-area-chart [polarAreaChartLabels]="polarAreaChartLabels" [polarAreaChartData]="polarAreaChartData"></ngx-utilitario-polar-area-chart>
 <button (click)="cambiarPolar()">cambiar</button>
