--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,5 @@
 <button (click)="cambiarLine()">cambiar lable</button>
 <ngx-utilitario-polar-area-chart [polarAreaChartLabels]="polarAreaChartLabels" [polarAreaChartData]="polarAreaChartData"></ngx-utilitario-polar-area-chart>
 <button (click)="cambiarPolar()">cambiar</button>
+<ngx-utilitario-pie-chart [pieChartLabels]="pieChartLabels" [pieChartData]="pieChartData"></ngx-utilitario-pie-chart>
+<button (click)="cambiarPie()">cambiar</button>
