--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid row-no-padding ngx-utilitario-chat" style="height: 400px">
+<div class="container-fluid row-no-padding ngx-utilitario-chat">
   <div class="row">
     <div class="col-md-4 col-sm-12 ngx-utilitario-chat-list">
       <header class="ngx-util-list-header">
