--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detail/chat-detail.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detail/chat-detail.component.html
@@ -49,7 +49,7 @@
   </div>
   <!--Agregar chat-->
   <div class="container-fluid ngx-util-detail-add">
-    <div class="row">
+    <div class="container">
       <ngx-utilitario-chat-detail-add class="col-12 ngx-utilitario-chat-agregar" (newMessage)="messageSend($event)" (newImage)="imagePreview($event)"
         [disabled]="chatDetail.lock"></ngx-utilitario-chat-detail-add>
     </div>
