--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,35 @@
 .fondo {
     background: gray !important;
 }
+
 :host ::ng-deep .search-highlight{
     background: red;
+}
+
+.ngx-utilitario-chat-list {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
+.ngx-util-list-header{
+    background: #fff;
+    color: #324148;
+    padding: 1.37rem 0.93rem;
+    border-bottom: 0.06rem solid #e0e3e4;
+    text-align: center;
+    font-size: 1.12rem;
+    font-weight: 600;
+    font-family: 'Lato', sans-serif;
+    height: 4.37rem;
+}
+
+.ngx-util-list-header span{
+    float: right;
+    font-size: inherit;
+}
+
+.ngx-util-list-detail{
+    flex-grow : 1;
+    overflow: hidden;
 }
