--- a/src/app/chat/chat/chat-detail/chat-detail.component.scss
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.scss
@@ -162,3 +162,18 @@
 //     height: 100%;
 // }
 
+$font-size: 20px;
+$line-height: 1.4;
+$lines: 1;
+
+.text-ellipsis{
+    display: block;
+    display: -webkit-box;
+    height: $font-size * $line-height * $lines;
+    font-size: $font-size;
+    line-height: $line-height;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
