--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,3 +40,4 @@
 <div style="height: 300px" class="col-md-4 col-sm-12">
     <ngx-utilitario-chat-detail [chatDetail]="chatDetail" [moveToMessage]="moveToMessageIndex"></ngx-utilitario-chat-detail>
 </div>
+<ngx-utilitario-spinner></ngx-utilitario-spinner>
