--- a/src/app/spinner/spinner/spinner.component.html
+++ b/src/app/spinner/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div style="position: fixed; top: 0; left: 0; background: rgba(0, 0, 0, 0.1)" >
+<div class="clt-screen-100">
   <div class="btp-overlay">
     <div class="btp-loading-indicator__container" [style.width]="indicatorSize" [style.height]="indicatorSize">
       <div class="btp-spinner">
