--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -32,3 +32,9 @@
   }
 }
 
+/// Mixin para asignar altura y ancho
+/// @author renato cohaila 
+@mixin size($width, $height) {
+  width: $width;
+  height: $height;
+}
