--- a/src/app/loading/ellipsis/ellipsis.component.html
+++ b/src/app/loading/ellipsis/ellipsis.component.html
@@ -1,3 +1,7 @@
-<p>
-  ellipsis works!
-</p>
+<div class="btp-ellipsis" [style.width]="indicatorSize" [style.height]="indicatorSize">
+    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
+    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
+    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
+    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
+  </div>
+  
