--- a/src/app/loading/spinner/spinner.component.html
+++ b/src/app/loading/spinner/spinner.component.html
@@ -1,3 +1,7 @@
-<p>
-  spinner works!
-</p>
+<div class="btp-spinner">
+    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+  </div>
+  
