spinner cambio en estilos

--- a/src/app/loading/spinner/spinner.component.html
+++ b/src/app/loading/spinner/spinner.component.html
@@ -1,7 +1,7 @@
-<div class="btp-spinner">
-    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
-    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
-    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
-    <div class="btp-spinner__part" [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+<div class="clt-spinner">
+    <div [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
+    <div [style.border-width]="borderWidth" [style.border-color]="borderColor"></div>
   </div>
   
