--- a/src/app/loading/ellipsis/ellipsis.component.html
+++ b/src/app/loading/ellipsis/ellipsis.component.html
@@ -1,7 +1,7 @@
-<div class="btp-ellipsis" [style.width]="indicatorSize" [style.height]="indicatorSize">
-    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
-    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
-    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
-    <div class="btp-ellipsis__part" [style.background-color]="indicatorColor"></div>
+<div class="clt-ellipsis" [style.width]="indicatorSize" [style.height]="indicatorSize">
+    <div [style.background-color]="indicatorColor"></div>
+    <div [style.background-color]="indicatorColor"></div>
+    <div [style.background-color]="indicatorColor"></div>
+    <div [style.background-color]="indicatorColor"></div>
   </div>
   
