--- a/src/app/loading/loading/loading.component.html
+++ b/src/app/loading/loading/loading.component.html
@@ -1,5 +1,5 @@
 <ngx-utilitario-overlay>
-    <div class="clt-loading-indicator__container" [style.width]="indicatorSize" [style.height]="indicatorSize">
+    <div class="clt-loading-indicator" [style.width]="indicatorSize" [style.height]="indicatorSize">
         <ng-template ngxUtilitarioIndicatorHost></ng-template>
     </div>
 </ngx-utilitario-overlay>
