--- a/src/app/loading/ellipsis/ellipsis.component.scss
+++ b/src/app/loading/ellipsis/ellipsis.component.scss
@@ -1,11 +1,10 @@
-:host,
-.btp-ellipsis {
+.clt-ellipsis {
   display: inline-block;
   position: relative;
   width: 100%;
   height: 100%;
 }
-.btp-ellipsis div {
+.clt-ellipsis div {
   position: absolute;
   top: 42%;
   width: 13%;
@@ -13,26 +12,23 @@
   border-radius: 50%;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-.btp-ellipsis__part {
-  background-color: #7B1FA2;
-}
-.btp-ellipsis div:nth-child(1) {
+.clt-ellipsis div:nth-child(1) {
   left: 16%;
-  animation: btp-ellipsis1 0.6s infinite;
+  animation: clt-ellipsis1 0.6s infinite;
 }
-.btp-ellipsis div:nth-child(2) {
+.clt-ellipsis div:nth-child(2) {
   left: 16%;
-  animation: btp-ellipsis2 0.6s infinite;
+  animation: clt-ellipsis2 0.6s infinite;
 }
-.btp-ellipsis div:nth-child(3) {
+.clt-ellipsis div:nth-child(3) {
   left: 40%;
-  animation: btp-ellipsis2 0.6s infinite;
+  animation: clt-ellipsis2 0.6s infinite;
 }
-.btp-ellipsis div:nth-child(4) {
+.clt-ellipsis div:nth-child(4) {
   left: 64%;
-  animation: btp-ellipsis3 0.6s infinite;
+  animation: clt-ellipsis3 0.6s infinite;
 }
-@keyframes btp-ellipsis1 {
+@keyframes clt-ellipsis1 {
   0% {
     transform: scale(0);
   }
@@ -40,7 +36,7 @@
     transform: scale(1);
   }
 }
-@keyframes btp-ellipsis3 {
+@keyframes clt-ellipsis3 {
   0% {
     transform: scale(1);
   }
@@ -48,7 +44,7 @@
     transform: scale(0);
   }
 }
-@keyframes btp-ellipsis2 {
+@keyframes clt-ellipsis2 {
   0% {
     transform: translate(0, 0);
   }
