--- a/src/app/loading/spinner/spinner.component.scss
+++ b/src/app/loading/spinner/spinner.component.scss
@@ -1,3 +1,16 @@
+/**
+ * evitaremos acciones del mouse
+ * y lo posiccionaremos sobre * el overview que tiene el siguiente z-index 9999
+ */
+.clt-loading-indicator {
+  pointer-events: none;
+  position: relative;
+  z-index: 10000;
+}
+
+/**
+   * Ocuparemos todo el espacio dado por el padre 
+   */
 .clt-spinner {
   position: relative;
   top: 0;
@@ -8,6 +21,10 @@
   height: 100%;
 }
 
+/**
+   * Estilos al spinner 
+   * definimos el estilo de rotar de forma indefinida
+   */
 .clt-spinner div {
   box-sizing: border-box;
   display: block;
@@ -21,18 +38,28 @@
   border-color: #fff transparent transparent transparent;
 }
 
+/**
+   * Tiempo de la animacion del spinner
+   */
 .clt-spinner div:nth-child(1) {
   animation-delay: -0.45s;
 }
-
+/**
+   * Tiempo de la  animacion del spinner
+   */
 .clt-spinner div:nth-child(2) {
   animation-delay: -0.3s;
 }
-
+/**
+   * tiempo de la animacion del spinner 
+   */
 .clt-spinner div:nth-child(3) {
   animation-delay: -0.15s;
 }
 
+/**
+   * animacion de rotar
+   */
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
