--- a/src/sass/abstracts/_functions.scss
+++ b/src/sass/abstracts/_functions.scss
@@ -1,12 +1,13 @@
-// -----------------------------------------------------------------------------
-// This file contains all application-wide Sass functions.
-// -----------------------------------------------------------------------------
-
-/// Native `url(..)` function wrapper
-/// @param {String} $base - base URL for the asset
-/// @param {String} $type - asset type folder (e.g. `fonts/`)
-/// @param {String} $path - asset path
-/// @return {Url}
+/** -----------------------------------------------------------------------------
+ * This file contains all application-wide Sass functions.
+ * -----------------------------------------------------------------------------
+ */
+/** Native `url(..)` function wrapper
+ * @param {String} $base - base URL for the asset
+ * @param {String} $type - asset type folder (e.g. `fonts/`)
+ * @param {String} $path - asset path
+ * @return {Url} 
+ */
 @function asset($base, $type, $path) {
   @return url($base + $type + $path);
 }
