--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,9 @@
         </div>
     </div>
 </div> -->
-<div style="height: 300px" class="col-md-4 col-sm-12">
+<!-- <div style="height: 300px" class="col-md-4 col-sm-12">
     <ngx-utilitario-chat-detail [chatDetail]="chatDetail" [moveToMessage]="moveToMessageIndex"></ngx-utilitario-chat-detail>
-</div>
+</div> -->
 <!-- <ngx-utilitario-loading></ngx-utilitario-loading> -->
+
+<ngx-utilitario-menu-dot></ngx-utilitario-menu-dot>
